; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_compile.c_zend_compile_goto.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_compile.c_zend_compile_goto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_10__** }
%struct.TYPE_9__ = type { i32, %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i64 }
%struct.TYPE_11__ = type { i32 }

@ZEND_GOTO = common dso_local global i32 0, align 4
@context = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zend_compile_goto(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_9__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_11__, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  %8 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_10__*, %struct.TYPE_10__** %10, i64 0
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  store %struct.TYPE_10__* %12, %struct.TYPE_10__** %3, align 8
  %13 = call i64 (...) @get_next_op_number()
  store i64 %13, i64* %6, align 8
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %15 = call i32 @zend_compile_expr(i32* %4, %struct.TYPE_10__* %14)
  %16 = call i32 @zend_handle_loops_and_finally(i32* null)
  %17 = load i32, i32* @ZEND_GOTO, align 4
  %18 = call %struct.TYPE_9__* @zend_emit_op(i32* null, i32 %17, i32* null, i32* %4)
  store %struct.TYPE_9__* %18, %struct.TYPE_9__** %5, align 8
  %19 = call i64 (...) @get_next_op_number()
  %20 = load i64, i64* %6, align 8
  %21 = sub nsw i64 %19, %20
  %22 = sub nsw i64 %21, 1
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %23, i32 0, i32 1
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 0
  store i64 %22, i64* %25, align 8
  %26 = load i32, i32* @context, align 4
  %27 = call i32 @CG(i32 %26)
  %28 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 0
  store i32 %27, i32* %28, align 4
  %29 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 8
  ret void
}

declare dso_local i64 @get_next_op_number(...) #1

declare dso_local i32 @zend_compile_expr(i32*, %struct.TYPE_10__*) #1

declare dso_local i32 @zend_handle_loops_and_finally(i32*) #1

declare dso_local %struct.TYPE_9__* @zend_emit_op(i32*, i32, i32*, i32*) #1

declare dso_local i32 @CG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
